fixed alignment of chatox, chat header

--- a/src/app.scss
+++ b/src/app.scss
@@ -76,6 +76,7 @@ div {
 
 .from-watson{
   padding-bottom: 1rem;
+
   .message-inner {
     position: relative;
     font-size: 1rem;
@@ -124,8 +125,6 @@ div {
     border-top-left-radius: 1.25rem;
   }
 }
-
-
 
 .load .message-inner {
   opacity: 1;
@@ -180,30 +179,40 @@ div {
   }
 }
 
-#textInput {
-  font-size: 1rem;
-  background: #fff;
-  border-radius: 100rem;
-  letter-spacing: 0.015rem;
-  line-height: 1.3125rem;
-  height: 2.5rem;
-  max-width: 75%;
-  @include padder(1rem,0.125rem ,0 ,0);
-  margin: 0.375rem;
-  width: 100rem;
-  border: none;
-  border: solid 1px #B9BBBE;
-}
+.inputOutline{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  
+  #textInput {
+    font-size: 1rem;
+    background: #fff;
+    border-radius: 100rem;
+  
+    letter-spacing: 0.015rem;
+    line-height: 1.3125rem;
+  
+    height: 2.5rem;
+    max-width: 75%;
+  
+    @include padder(1rem,0.125rem ,0 ,0);
+    @include marginer(0,0.7rem,0 ,0.375rem);
+  
+    width: 100rem;
+    border: none;
+    border: solid 1px #B9BBBE;
+  }
 
-#chat-button{
-  position: fixed;
-  bottom: 2.5%;
-  width: 4rem;
-  height: 2.5rem;
-  @include padder(0.125rem,0.125rem ,0 ,0);
-  border-radius: 100rem;
-  border: none;
-  border: solid 1px #B9BBBE;
+  #chat-button{
+    width: 4rem;
+    height: 2.5rem;
+    border-radius: 100rem;
+    border: none;
+    border: solid 1px #B9BBBE;
+    @include padder(0.125rem,0.125rem ,0 ,0);
+    @include marginer(0.7rem,0.7rem ,0 ,0.375rem)
+  }
 }
 
 .options-list {
@@ -250,10 +259,12 @@ div {
   min-width: 100%;
 }
 
-
 .chat-column-header{
-  display: flexbox;
-  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  
   background: $mainColour;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -261,19 +272,21 @@ div {
   font-family: $font-heading;
   height: 9%;
 
+  text-align: center;
+
   font-size: 1.25rem;
 
   .chat-header-message{
-    align-content: center;
-    text-align: center;
-    @include marginer(1rem,1rem, 1rem ,1rem )
-
+    @include marginer(1rem,1.5rem, 1rem ,1rem )
   }
   
   .header-logo{
-    position: absolute;
-    width: 3.25rem;
-    @include marginer(1rem,1rem, 0 ,1rem )
+    width: 3rem;
+    height: 3.5rem;
+    @include marginer(1rem,1.5rem, 0 ,1rem )
   }
 }
 
+  .visually-hidden{
+    display: none;
+  }
